<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".AnimalDetails">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/MediumMargin"
            android:layout_margin="@dimen/smallMargin">
            <ImageView
                android:id="@+id/ivIndividualProfile"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/test"
                android:scaleType="centerCrop"
                android:contentDescription="@string/profileimage" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvIndividualName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/MediumMargin"
            android:text="@string/name_of_the_animal"/>
        <TextView
            android:id="@+id/tvIndividualAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/MediumMargin"
            android:layout_marginBottom="@dimen/smallMargin"
            android:text="@string/address"/>
        <TextView
            android:id="@+id/tvIndividualAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/MediumMargin"
            android:layout_marginBottom="@dimen/smallMargin"
            android:text="@string/lorem_ipsum"/>
        <TextView
            android:id="@+id/tvIndividualWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/MediumMargin"
            android:text="@string/lorem_ipsum"
            android:layout_marginBottom="@dimen/smallMargin"/>
    </LinearLayout>
</ScrollView>
